# clinical-integration-agent-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agent/: README.md  clinical_agent.py  run_agent.py
clinical_agent/: amplifier.py  api.py  audio.py  clinician_config.py  config.py  contract.py  events.py  gcs.py  main.py  session.py  store.py  streaming.py  synthetic.py  transcribe.py
clinical_agent/agents/: base.py  roles.py
docs/: AGENT_FLOW_SPEC.md
docs/contract/: contract.json
docs/superpowers/plans/: 2026-07-18-voice-agent-backend.md
docs/superpowers/specs/: 2026-07-18-voice-agent-backend-design.md
mock_agent/: README.md  build_scenario.py  build_scenario_real.py  build_scenario_womenshealth.py  scenario_respiratory.json  scenario_womenshealth.json  server.py  viewer.html
pipeline/: aggregate.py  chunk_audio.py  run_aria_batch.py
sample_data/: aggregate.json  visits.example.json
scripts/: build_notes.py  dump_contract.py  import_demo_patient.py  prewarm_cache.py  smoke_live.py
tests/: conftest.py  test_agent_base.py  test_amplifier.py  test_api_visits.py  test_audio.py  test_clinician_config.py  test_config.py  test_contract.py  test_events.py  test_gcs.py  test_roles.py  test_session.py  test_store.py  test_streaming.py  test_synthetic.py  test_transcribe.py
viz/: build_viz.py  trajectories.html
